# ForSamuel

./: .gitignore  README.md  bluerov_bin_mission.yaml  bluerov_mission.yaml  bluerov_torpedo_mission.yaml  bluerov_ws.repos  build.bash  run.bash
docker/: Dockerfile
docs/: customization.md  vision_smoke_test.md
src/bluerov_sim/: CMakeLists.txt  package.xml
src/bluerov_sim/bluerov_sim/: goto.py  node_registry.py
src/bluerov_sim/bluerov_sim/bins/: __init__.py  bins.py  choice_selector.py  goto_cluster.py
src/bluerov_sim/bluerov_sim/shared_trees/: __init__.py  search.py
src/bluerov_sim/bluerov_sim/torpedo/: __init__.py  move_and_shoot_seq.py  point_correspondences_check.py  torpedo.py
src/bluerov_sim/config/: bluerov_gz_bridge.yaml  bluerov_gz_bridge_full.yaml  bluerov_single_tfs.yaml
src/bluerov_sim/config/vision_pipeline/: torpedo.yaml
src/bluerov_sim/hooks/: setup.dsv
src/bluerov_sim/launch/: bluerov_bin_bt.launch.py  bluerov_bin_cluster.launch.py  bluerov_bin_controls.launch.py  bluerov_bin_vision.launch.py  bluerov_cluster.launch.py  bluerov_controls.launch.py  bluerov_mission.launch.py  bluerov_sim.launch.py  bluerov_square_bt.launch.py  bluerov_tfs.launch.py  bluerov_torpedo_bt.launch.py  bluerov_torpedo_cluster.launch.py  bluerov_torpedo_controls.launch.py  bluerov_torpedo_vision.launch.py
src/bluerov_sim/mavros_params/: sim_mavros_params.yaml
src/bluerov_sim/models/bluerov2/: model.sdf
src/bluerov_sim/scripts/: actuators_stub.py  arm_and_set_mode.py  bluerov_bin_mission_tree.py  bluerov_square_mission_tree.py  bluerov_torpedo_mission_tree.py  goto.py  ground_truth_to_mavros.py  locomotion_action_server.py  node_registry.py  world_objects_to_markers.py
src/bluerov_sim/urdf/: bluerov2.urdf
