<?xml version="1.0"?>
<package format="3">
  <name>bluerov_sim</name>
  <version>1.0.0</version>
  <description>BlueROV2 + ArduSub simulation orchestrator</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dave_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>dvl_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
